# kadmin-remctl

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen  config.h.in  configure  configure.ac  kadmin-backend  kadmin-backend-heim  kadmin-backend-heim.8  kadmin-backend.8  kadmin-remctl-2.2.tar.gz.delta  kadmin-remctl_2.2.orig.tar.gz.delta  kadmin-remctl_2.2.orig.tar.gz.id  kadmin-remctl_2.3.orig.tar.gz.delta  kadmin-remctl_2.3.orig.tar.gz.id  kadmin-remctl_2.4.orig.tar.gz.delta  kadmin-remctl_2.4.orig.tar.gz.id  kadmin-remctl_3.0.orig.tar.gz.delta  kadmin-remctl_3.0.orig.tar.gz.id  kadmin-remctl_3.1.orig.tar.gz.delta  kadmin-remctl_3.1.orig.tar.gz.id  kadmin-remctl_3.2.orig.tar.gz.delta  kadmin-remctl_3.2.orig.tar.gz.id  kadmin-remctl_3.3.orig.tar.xz.delta  kadmin-remctl_3.3.orig.tar.xz.id  kadmin-remctl_3.4.orig.tar.xz.delta  kadmin-remctl_3.4.orig.tar.xz.id  kadmin-remctl_3.5.orig.tar.xz.delta  kadmin-remctl_3.5.orig.tar.xz.id  kadmin-remctl_3.6.orig.tar.xz.delta  kadmin-remctl_3.6.orig.tar.xz.id  ksetpass.1  ksetpass.c  (+4 more)
debian/: changelog  control  copyright  kadmin-backend.install  kadmin-remctl-heimdal.install  kadmin-remctl.docs  kadmin-remctl.install  kadmin-remctl.lintian  password-change.install  password-reset.run  rules  watch
debian/patches/: paths
debian/source/: patch-header
docs/: design
m4/: krb5.m4
portable/: krb5-extra.c  krb5.h  system.h
remctl/: kadmin  password
